--- a/src/Resume/wwwroot/templates/personal.details.html
+++ b/src/Resume/wwwroot/templates/personal.details.html
@@ -1,10 +1,8 @@
-﻿<div class="post-preview">
-    <a href="post.html">
-        <h2 class="post-title">
-            {{applicant.fullName}}
-        </h2>
-        <h3 class="post-subtitle">
-            {{applicant.firstName}}
-        </h3>
-    </a>    
+﻿<div class="post-preview">    
+    <h2 class="post-title">
+        <em>Summary</em>
+    </h2>
+    <h3 class="post-subtitle">
+        {{applicant.description}}
+    </h3>    
 </div>
