Added professional experience section

--- a/src/Resume/wwwroot/templates/key.skills.html
+++ b/src/Resume/wwwroot/templates/key.skills.html
@@ -1,6 +1,6 @@
 ﻿<div class="post-preview">
     <h2 class="post-title">
-        <em>Key Skills &amp; Experience</em>
+        <em>Key Skills &amp; Knowledge</em>
     </h2>
     <div class="container">
         <div class="row">
