--- a/src/Resume/wwwroot/css/clean-blog.css
+++ b/src/Resume/wwwroot/css/clean-blog.css
@@ -21,6 +21,7 @@ h2,
 h3,
 h4,
 h5,
+li,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
@@ -212,9 +213,12 @@ hr.small {
 .post-preview {
   color: #404040;
 }
+.container {
+    margin-right: 0px;
+}
 .post-title {
-  font-size: 30px;
-  margin-top: 30px;
+  font-size: 25px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 .post-subtitle {
@@ -338,34 +342,6 @@ form .row:first-child .floating-label-form-group {
   background-color: #0085a1;
   border: 1px solid #0085a1;
   color: white;
-}
-.pager {
-  margin: 20px 0 0;
-}
-.pager li > a,
-.pager li > span {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  padding: 15px 25px;
-  background-color: white;
-  border-radius: 0;
-}
-.pager li > a:hover,
-.pager li > a:focus {
-  color: white;
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
-}
-.pager .disabled > a,
-.pager .disabled > a:hover,
-.pager .disabled > a:focus,
-.pager .disabled > span {
-  color: #808080;
-  background-color: #404040;
-  cursor: not-allowed;
 }
 ::-moz-selection {
   color: white;
