--- a/src/Resume/wwwroot/templates/navigation.html
+++ b/src/Resume/wwwroot/templates/navigation.html
@@ -6,5 +6,8 @@
         <li>
             <a [routerLink]="['Key Skills']">Key Skills &amp; Knowledge</a>
         </li>        
+        <li>
+            <a [routerLink]="['Professional Experience']">Professional Experience</a>
+        </li>        
     </ul>
 </div>
