--- a/src/Resume/wwwroot/templates/navigation.html
+++ b/src/Resume/wwwroot/templates/navigation.html
@@ -8,6 +8,9 @@
         </li>        
         <li>
             <a [routerLink]="['Professional Experience']">Professional Experience</a>
-        </li>        
+        </li>    
+        <li>
+            <a [routerLink]="['Education']">Education</a>
+        </li>      
     </ul>
 </div>
