Added education and timeline

--- a/src/Resume/wwwroot/templates/navigation.html
+++ b/src/Resume/wwwroot/templates/navigation.html
@@ -5,9 +5,12 @@
         </li>
         <li>
             <a [routerLink]="['Key Skills']">Key Skills &amp; Knowledge</a>
-        </li>        
+        </li>
         <li>
             <a [routerLink]="['Professional Experience']">Professional Experience</a>
-        </li>        
+        </li>
+        <li>
+            <a [routerLink]="['Education']">Education</a>
+        </li>
     </ul>
 </div>
