--- a/src/Resume/wwwroot/templates/resume.html
+++ b/src/Resume/wwwroot/templates/resume.html
@@ -16,7 +16,7 @@
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
 <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
@@ -30,9 +30,9 @@
     </div>
 </header>
 <!-- Main Content -->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <div class="col-lg-offset-1 col-lg-10">
             <router-outlet></router-outlet>
         </div>
     </div>
