--- a/src/Resume/wwwroot/templates/personal.details.html
+++ b/src/Resume/wwwroot/templates/personal.details.html
@@ -1,8 +1,8 @@
-﻿<div class="post-preview">    
+﻿<div class="post-preview">
     <h2 class="post-title">
         <em>Summary</em>
     </h2>
-    <h3 class="post-subtitle">
+    <div>
         {{applicant.description}}
-    </h3>    
+    </div>
 </div>
