--- a/src/Resume/wwwroot/templates/personal.details.html
+++ b/src/Resume/wwwroot/templates/personal.details.html
@@ -2,7 +2,7 @@
     <h2 class="post-title">
         <em>Summary</em>
     </h2>
-    <div>
+    <h3 class="post-subtitle">
         {{applicant.description}}
-    </div>    
+    </h3>    
 </div>
