--- a/src/templates/key.skills.html
+++ b/src/templates/key.skills.html
@@ -4,23 +4,21 @@
     </h2>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <h4 class="post-subtitle">
                     <em>Skills</em>
                 </h4>
                 <ul>
-                    <li *ngFor="let skill of keySkills">{{skill.skill}} ({{skill.yearsExperience}} years)</li>
+                    <li *ngFor="let skill of keySkills">{{skill}}</li>
                 </ul>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <h4 class="post-subtitle">
                     <em>Industry Knowledge</em>
                 </h4>
                 <ul>
-                    <li *ngFor="let kn of knowledge">{{kn.industry}} ({{kn.yearsExperience}} years)</li>
+                    <li *ngFor="let kn of knowledge">{{kn}}</li>
                 </ul>
             </div>
         </div>
